--- a/docs/amplify-theme/_layouts/categories.html
+++ b/docs/amplify-theme/_layouts/categories.html
@@ -28,7 +28,7 @@
 									{% endfor %}
 								</div><!-- /.row -->
 								<div>
-									<a href="/media/cli_guide"> <button class="btn install-amplify-cli" >Install Amplify CLI</button> </a>
+									<a href="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/media/cli_guide"> <button class="btn install-amplify-cli" >Install Amplify CLI</button> </a>
 								</div>
 							</div><!-- /.nav-grid -->
 						</div><!-- /.col -->
