--- a/docs/amplify-theme/_layouts/default.html
+++ b/docs/amplify-theme/_layouts/default.html
@@ -57,7 +57,7 @@
 													{% if page.url contains item.url %}
 														<div class='in-this-page js-sections'></div>
 													{% else %}
-														<a href="{{ item.url }}" class="section-head">{{ item.title }}</a>
+														<a href="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}{{ item.url }}" class="section-head">{{ item.title }}</a>
 													{% endif %}	
 												{% endfor %}
 											</div>
