--- a/docs/amplify-theme/_layouts/homepage.html
+++ b/docs/amplify-theme/_layouts/homepage.html
@@ -209,7 +209,7 @@
 							</a>
 						</div>
 						</div>
-						<img id="code-window" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Images/Code-Window@2x.png">
+						<img class = "hidden-xs" id="code-window" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Images/Code-Window@2x.png">
 					</div><!-- /.row -->
 				</div><!-- /.container -->
 			</div><!-- /.section -->
