--- a/docs/amplify-theme/_sass/objects/_section.scss
+++ b/docs/amplify-theme/_sass/objects/_section.scss
@@ -4,10 +4,10 @@
 
 /* ----- General ----- */
 .section {
-	padding: 3.75rem 0 (3.75rem - 1.25rem) 0;
+	//padding: 3.75rem 0 (3.75rem - 1.25rem) 0;
 
 	@media (min-width: $screen-sm-min) {
-		padding: 4.25rem 0 (4.25rem - 1.25rem) 0;
+		//padding: 4.25rem 0 (4.25rem - 1.25rem) 0;
 	}
 }
 
