homepage padding fix

--- a/docs/amplify-theme/_layouts/default.html
+++ b/docs/amplify-theme/_layouts/default.html
@@ -6,7 +6,7 @@
 	<body class="{{ site.amplify.color_theme }}" data-spy="scroll" data-target=".js-scrollspy">
 		{% include docs-header.html %}
 
-		<div class="section">
+		<div class="section-padding">
 			<div class="container docs-page-container">
 				<!-- <div class="github-edit-link">
 					<a title="Edit this page on github" class="" target="_blank" rel="noopener noreferrer" 
