small aesthetic fixes

--- a/docs/amplify-theme/_layouts/categories.html
+++ b/docs/amplify-theme/_layouts/categories.html
@@ -27,9 +27,9 @@
 										</div><!-- /.col -->
 									{% endfor %}
 								</div><!-- /.row -->
-								<div>
+								<!-- <div>
 									<a href="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/media/cli_guide"> <button class="btn install-amplify-cli" >Install Amplify CLI</button> </a>
-								</div>
+								</div> -->
 							</div><!-- /.nav-grid -->
 						</div><!-- /.col -->
 					</div><!-- /.row -->
