--- a/docs/amplify-theme/_layouts/quick_start.html
+++ b/docs/amplify-theme/_layouts/quick_start.html
@@ -28,7 +28,7 @@
 									{% endfor %}
 								</div><!-- /.row -->
 								<div>
-                                    <a href="cli_guide"> <button class="btn install-amplify-cli" >Install Amplify CLI</button> </a>
+                                    <!-- <a href="cli_guide"> <button class="btn install-amplify-cli" >Install Amplify CLI</button> </a> -->
                                     <a href="cli_home">
                                         <div id="learn-more-about-cli-box">
                                             <p class="learn-more-link">Learn more about the CLI</p>
