--- a/docs/amplify-theme/_layouts/quick_start.html
+++ b/docs/amplify-theme/_layouts/quick_start.html
@@ -29,12 +29,12 @@
 								</div><!-- /.row -->
 								<div>
                                     <!-- <a href="cli_guide"> <button class="btn install-amplify-cli" >Install Amplify CLI</button> </a> -->
-                                    <a href="cli_home">
+                                    <!-- <a href="cli_home">
                                         <div id="learn-more-about-cli-box">
                                             <p class="learn-more-link">Learn more about the CLI</p>
                                             <img class="down-arrow" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/icons/Small/More-Button-no-shadow.svg" />
                                         </div>
-                                    </a>
+                                    </a> -->
 								</div>
 							</div><!-- /.nav-grid -->
 						</div><!-- /.col -->
@@ -42,96 +42,128 @@
 				</div><!-- /.container -->
             </div><!-- /.section -->
 		{% endif %}
+            <div class="container">
+                <div class="row">
+                    <div class="section-top section-top-category section-top-quickstart">
+                        <div class="container">
+                            <div class="row">
+                                <div class="header col-sm-7">
+                                    Sign up for an AWS Account
+                                </div>
+                                <div class="subheader col-sm-7">
+                                    There are no upfront charges or any term commitments to create an AWS account and signing up gives you immediate access to the AWS Free Tier
+                                </div>
+                            </div>
+                            <div>
+                                <a href="https://buildon.aws/?sc_channel=ba&sc_campaign=build_on_aws&sc_publisher=direct&trk=ba_buildonaws_direct"> 
+                                    <button class="btn" id="install-cli-btn">Sign Up Now</button> 
+                                </a>
+                            </div>
+                            <img id="aws-logo" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Logos/aws_logo.png" />
+                            <div class="div-number">1</div>
+                        </div>
+                    </div>
+                </div><!-- /.row --> 
+            </div><!-- /.container -->
 
+            <div class="container">
+                <div class="row">
+                    <div class="section-top section-top-category section-top-quickstart">
+                        <div class="container">
+                            <div>
+                                <div class="header col-sm-8">
+                                    Install the Amplify Command Line Interface (CLI).
+                                </div>
+                                <div class="subheader col-sm-10">
+                                    Use the CLI to enable cloud services and integrate the into your apps. The CLI works with apps built using the AWS Amplify Library (Web, React, and React Native) and the AWS Mobile SDK (iOS, Android, Xamarin).
+                                </div>
+                            </div>
+                            <div class="row">
+                                    <div class="language-bash highlighter-rouge inline-block section-code-block">
+                                        <div class="highlight">
+                                            <pre class="highlight section-code-block">
+<code>$ npm install -g @aws-amplify/cli
+
+$ amplify configure</code>
+                                            </pre>
+                                        </div>    
+                                    </div>
+                                <p class="subheader inline-block install-node-p">Please <a href="https://nodejs.org/en/download/">install node.js</a> before you initialize</p>
+                            </div>
+                            <div class="div-number">2</div>
+                        </div>
+                    </div>
+                </div><!-- /.row -->      
+            </div><!-- /.container -->
 			
             <div class="container">
                 <div class="row">
-                    <div>
-                        <div class="section-top section-top-category section-top-quickstart">
-                            <div class="container">
-                                <div class="row">
-                                    <div class="header col-sm-8" id="get-started-header">
-                                        Get started with your project in the platform of your choice.
-                                    </div>
+                    <div class="section-top section-top-category section-top-quickstart"  id="bottom-section">
+                        <div class="container">
+                            <div class="row">
+                                <div class="header col-sm-8" id="get-started-header">
+                                    Start your project in the platform of your choice. 
                                 </div>
-                                <div class="row">
-                                    <div class="row-title">
-                                        <p class="title">Platforms with Amplify Library Support</p>
-                                        <p class="subtitle">AWS Amplify provides a declarative easy-to-use library for building cloud-powered web and mobile applications.</p>
+                            </div>
+                            <!-- <div class="row">
+                                <div class="row-title">
+                                    <p class="title">Platforms with Amplify Library Support</p>
+                                    <p class="subtitle">AWS Amplify provides a declarative easy-to-use library for building cloud-powered web and mobile applications.</p>
+                                </div>
+                                <div class="platform-container">
+                                    <div class="platform-box">
+                                        <img class="circle-badge" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Circle-Badge/JS@1x.png" />
+                                        <p class="platform-title">Build with JavaScript</p>
+                                        <a href="quick_start"> <button class="btn">Get Started</button> </a>
                                     </div>
-                                    <div class="platform-container">
+                                    <div class="platform-box">
+                                        <img class="circle-badge" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Circle-Badge/React@1x.png" />
+                                        <p class="platform-title">Build with React</p>
+                                        <a href="react_guide"> <button class="btn">Get Started</button> </a>
+                                    </div>
+                                    <div class="platform-box">
+                                        <img class="circle-badge" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Circle-Badge/ReactNat@1x.png" />
+                                        <p class="platform-title">Build with React Native</p>
+                                        <a href="react_native_guide"> <button class="btn">Get Started</button> </a>
+                                    </div>
+                                    <div class="platform-box">
+                                        <img class="circle-badge" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Circle-Badge/Angular@1x.png" />
+                                        <p class="platform-title">Build with Angular</p>
+                                        <a href="angular_guide"> <button class="btn">Get Started</button> </a>
+                                    </div>
+                                </div> -->
+                            <!-- </div>/.row -->
+                            <div class="row">
+                                <div class="row-title">
+                                    <p class="title">Platforms with Amplify Library Support</p>
+                                    <p class="subtitle">AWS Amplify provides a delcarative easy-to-use library for building cloud-powered web and mobile applications.</p>
+                                </div>
+                                <div class="platform-container">
                                         <div class="platform-box">
-                                            <img class="circle-badge" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Circle-Badge/JS@1x.png" />
-                                            <p class="platform-title">Build with JavaScript</p>
+                                            <img class="circle-badge" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Circle-Badge/Apple@1x.png" />
+                                            <p class="platform-title">Build with iOS</p>
                                             <a href="quick_start"> <button class="btn">Get Started</button> </a>
                                         </div>
                                         <div class="platform-box">
-                                            <img class="circle-badge" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Circle-Badge/React@1x.png" />
-                                            <p class="platform-title">Build with React</p>
-                                            <a href="react_guide"> <button class="btn">Get Started</button> </a>
+                                            <img class="circle-badge" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Circle-Badge/Droid@1x.png" />
+                                            <p class="platform-title">Build with Android</p>
+                                            <a href="quick_start"> <button class="btn">Get Started</button> </a>
+                                        </div>
+                                        <div class="platform-box">
+                                            <img class="circle-badge" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Circle-Badge/web.png" />
+                                            <p class="platform-title">Build for Web</p>
+                                            <a href="quick_start"> <button class="btn">Get Started</button> </a>
                                         </div>
                                         <div class="platform-box">
                                             <img class="circle-badge" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Circle-Badge/ReactNat@1x.png" />
                                             <p class="platform-title">Build with React Native</p>
-                                            <a href="react_native_guide"> <button class="btn">Get Started</button> </a>
-                                        </div>
-                                        <div class="platform-box">
-                                            <img class="circle-badge" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Circle-Badge/Angular@1x.png" />
-                                            <p class="platform-title">Build with Angular</p>
-                                            <a href="angular_guide"> <button class="btn">Get Started</button> </a>
+                                            <a href="quick_start"> <button class="btn">Get Started</button> </a>
                                         </div>
                                     </div>
-                                </div><!-- /.row -->
-                                <div class="row">
-                                    <div class="row-title">
-                                        <p class="title">Other Platforms</p>
-                                        <p class="subtitle">Use the AWS Mobile SDK to build applications for external platforms.</p>
-                                    </div>
-                                    <div class="platform-container">
-                                            <div class="platform-box">
-                                                <img class="circle-badge" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Circle-Badge/Apple@1x.png" />
-                                                <p class="platform-title">Build with iOS</p>
-                                                <a href="quick_start"> <button class="btn">Get Started</button> </a>
-                                            </div>
-                                            <div class="platform-box">
-                                                <img class="circle-badge" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Circle-Badge/Droid@1x.png" />
-                                                <p class="platform-title">Build with Android</p>
-                                                <a href="quick_start"> <button class="btn">Get Started</button> </a>
-                                            </div>
-                                            <div class="platform-box">
-                                                <img class="circle-badge" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Circle-Badge/Xamarin@1x.png" />
-                                                <p class="platform-title">Build with Xamarin</p>
-                                                <a href="quick_start"> <button class="btn">Get Started</button> </a>
-                                            </div>
-                                        </div>
-                                </div><!-- /.row -->
-                            </div>
+                            </div><!-- /.row -->
+                            <div class="div-number">3</div>
                         </div>
-                    </div><!-- /.col -->
-                </div><!-- /.row -->      
-            </div><!-- /.container -->
-            
-            
-            <div class="container">
-                <div class="row">
-                    <div>
-                        <div class="section-top section-top-category section-top-quickstart" id="bottom-section">
-                            <div class="container">
-                                <div class="row">
-                                    <div class="header col-sm-8">
-                                        Install the Amplify Command Line Interface (CLI).
-                                    </div>
-                                    <div class="subheader col-sm-10">
-                                        Use the CLI to enable cloud services and integrate the into your apps. The CLI wroks with apps built using the AWS Amplify Library (Web, React, and React Native) and the AWS Mobile SDK (iOS, Android, Xamarin).
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <a href="cli_guide"> <button class="btn" id="install-cli-btn">Install the CLI</button> </a>
-                                    <img src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/icons/Medium/CommandLine-Icon.svg" />
-                                </div>
-                            </div>
-                        </div>
-                    </div><!-- /.col -->
+                    </div>
                 </div><!-- /.row -->      
             </div><!-- /.container -->
         </div>
