--- a/docs/amplify-theme/_includes/site-header.html
+++ b/docs/amplify-theme/_includes/site-header.html
@@ -81,6 +81,7 @@
 					<button id="collapse-search">Cancel</button>
 				{% endif %}
 			</div><!-- /.row -->
+			<a id="github-logo" href="https://github.com/aws-amplify/amplify-js"><img src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Logos/GitHub-Mark-32px.png" /></a>
 		</div><!-- /.container -->
 	</header><!-- /.site-header -->
 {% endif %}
