cli header edit + styleguide header edit

--- a/docs/amplify-theme/_layouts/cli_home.html
+++ b/docs/amplify-theme/_layouts/cli_home.html
@@ -5,19 +5,19 @@
     </head>
 	<body class="{{ site.amplify.color_theme }}">
 		{% include site-header.html %}
-		<div class="hero-subheader cli">
+		<div class="hero-subheader dark">
 			<div class="container homepage-header">
 				<div class="row">
 					<div class="col-md-8">
 						<div class="align-container" data-mh>
 							<div class="align-inner">
-                                <h1 class="hero-subheader__title">Manage all of your services in one unified tool with Amplify Command Line Interface</h1>
+                                <h1 class="hero-subheader__title">A Comprehensive & Powerful Serverless Toolchain</h1>
 								<div id="button-logo-container">
                                     <a href="cli_guide" class="btn btn--dark btn--rounded btn--w-icon">
                                         {% if button.icon %}<i class="icon icon--{{ button.icon }}"></i>{% endif %}
                                         Install Amplify CLI
                                     </a>
-									<img id="half-phone" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Images/Phone-Banner@2x.png">
+									<img id="half-laptop" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Images/Laptop-Image@2x.png">
 								</div>
 							</div><!-- /.align-inner -->
 						</div><!-- /.align-container -->
