hero subheader overflow hidden

--- a/docs/amplify-theme/_sass/components/_redesign.scss
+++ b/docs/amplify-theme/_sass/components/_redesign.scss
@@ -497,7 +497,8 @@ a {
 	background-position: center center;
     //width: 1440px;
     height: 475px;
-	margin: auto;
+    margin: auto;
+    overflow: hidden;
 
 	@media (min-width: $screen-sm-min) {
         padding-top: 130px;
