guides updated with new CLI

--- a/docs/amplify-theme/_sass/components/_redesign.scss
+++ b/docs/amplify-theme/_sass/components/_redesign.scss
@@ -121,6 +121,7 @@
 
     .docs-header-amplify {
         color: white;
+        font-weight: 100;
     }
 }
 
@@ -1915,7 +1916,7 @@ li {
                             padding-left: 10px;
                             font-size: 13px;
                             line-height: 15px;
-                            border-left: 2px solid #DBD6D6;
+                            //border-left: 2px solid #DBD6D6;
                             font-weight: normal;
                         }
                     }
@@ -1923,7 +1924,7 @@ li {
                     .level-4 {
                         padding-left: 10px;
                         margin-left: 20px;
-                        border-left: 2px solid #DBD6D6;
+                        //border-left: 2px solid #DBD6D6;
                         a {
                             padding: 0;
                             font-size: 12px;
