--- a/docs/amplify-theme/_sass/generic/_base.scss
+++ b/docs/amplify-theme/_sass/generic/_base.scss
@@ -94,7 +94,7 @@ p {
 
 /* ----- Hyperlinks ----- */
 a {
-	color: inherit;
+	color: orange;
 	text-decoration: none;
 	border-bottom: .0625em solid;
 	border-color: inherit;
